--- a/TokTalk/app/src/main/res/layout/splash.xml
+++ b/TokTalk/app/src/main/res/layout/splash.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F7AA97"
+    android:id="@+id/splash_layout"
   >
   <RelativeLayout
       android:layout_width="match_parent"
@@ -17,7 +18,7 @@
       <ImageView
           android:layout_width="100dp"
           android:layout_height="100dp"
-          android:src="@drawable/TokTalk"
+          android:src="@drawable/toktalk"
           android:layout_alignTop="@+id/imageView"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="16dp" />
