--- a/TokTalk/app/src/main/res/layout/activity_signup.xml
+++ b/TokTalk/app/src/main/res/layout/activity_signup.xml
@@ -125,6 +125,7 @@
                 android:text="회원가입을 하셨나요?"
                 />
             <TextView
+                android:id="@+id/signin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
