--- a/TokTalk/app/src/main/res/layout/activity_signup.xml
+++ b/TokTalk/app/src/main/res/layout/activity_signup.xml
@@ -20,7 +20,7 @@
     <RelativeLayout
         android:id="@+id/signup_layout"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="450dp"
         android:layout_alignParentBottom="true">
         <android.support.v7.widget.CardView
         android:id="@+id/name_cv"
@@ -50,7 +50,7 @@
             android:layout_marginRight="30dp"
             >
             <EditText
-                android:id="@+id/signup_id_et"
+                android:id="@+id/signup_email_et"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@null"
@@ -58,7 +58,7 @@
                 android:textColorHint="#D9D4CF"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:hint="id"/>
+                android:hint="email"/>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
             android:id="@+id/pwd_cv"
